tests/invalid/import_from_inside_try/main.py
def main() -> None:
    try:
        from imports import module_a
    except Exception:
        x: int = 1
